--- a/src/ServerCode/UI/d3/test.html
+++ b/src/ServerCode/UI/d3/test.html
@@ -15,7 +15,7 @@
         <img id="rover" src="../static/rover.jpg" width="20%" height="20%" style="display: block;
           margin-left: auto;
           margin-right: auto;">
-          <p>Welcome to SwarmBot, select Survey to begin a survey or select Simulation to run a simulation!</p>
+          <p>Welcome to SwarmBot! Below is the visualization of the temperature of the data collected!</p>
           <div style="text-align:center;">
           </div>
           <style>
