--- a/src/ServerCode/UI/d3/test.html
+++ b/src/ServerCode/UI/d3/test.html
@@ -15,7 +15,7 @@
         <img id="rover" src="../static/rover.jpg" width="20%" height="20%" style="display: block;
           margin-left: auto;
           margin-right: auto;">
-          <p>Welcome to SwarmBot! Below is the visualization of the temperature of the data collected!</p>
+          <!-- <p>Welcome to SwarmBot! Below is the visualization of the temperature of the data collected!</p> -->
           <div style="text-align:center;">
           </div>
           <style>
@@ -29,7 +29,11 @@
 <!-- Load d3.js -->
 <script src="http://d3js.org/d3.v4.js"></script>
 
+<style>
+body {text-align:center;}
+</style>
 <!-- Create a div where the graph will take place -->
+
 <div id="temp"></div>
 
 <!-- Load color palettes -->
