--- a/src/ServerCode/UI/d3/test.html
+++ b/src/ServerCode/UI/d3/test.html
@@ -27,7 +27,7 @@
         </body>
 
 <!-- Load d3.js -->
-<script src="http://d3js.org/d3.v4.js"></script>
+<script src="d3.v4.js"></script>
 
 <style>
 body {text-align:center;}
@@ -37,6 +37,6 @@ body {text-align:center;}
 <div id="temp"></div>
 
 <!-- Load color palettes -->
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="d3-scale-chromatic.v1.min.js"></script>
 
 <script src="test.js"></script>
